cicd-microservices/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    project: cicd-microservices
    purpose: application
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    project: cicd-microservices
    purpose: monitoring
